# LearnCmake

./: CMakeLists.txt
LearnCmake/Src/test/: test.c  test.h
